fix: weird page transition on mobile

--- a/src/global.scss
+++ b/src/global.scss
@@ -43,10 +43,18 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: #303030;
-  color: #fff;
 }
 
 input {
   @include cdk-text-field-autofill-color(transparent, #fff);
+}
+
+.bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #303030;
+  color: #fff;
 }
